# Tensor-Dump

./: .gitignore  AGENTS.md  README.md  example.py  pyproject.toml  setup.py
tensor_dump/: __init__.py  compare.py  dump.py  load.py
tests/: test_all.py
